--- a/src/app/component/infra/sidebar/sidebar.component.scss
+++ b/src/app/component/infra/sidebar/sidebar.component.scss
@@ -29,7 +29,7 @@ main {
   }
 
   .item_selected {
-    background-color: $mma-p-orange;
+    background-color: $mma-p-green;
     color: $mma-p-white;
   }
 
@@ -46,8 +46,8 @@ main {
   }
 
   .subItem_selected {
-    background-color: $mma-v-orange15;
-    color: $mma-p-orange;
+    background-color: $mma-v-green15;
+    color: $mma-p-green;
   }
 
   .mma-btn-r {
