--- a/src/app/component/view/login/login.component.scss
+++ b/src/app/component/view/login/login.component.scss
@@ -5,7 +5,7 @@ main {
   display: flex;
   margin: 0;
 
-  background-image: url("../../../../assets/images/login_background.png");
+  background-image: url("../../../../assets/images/matrix.gif");
   background-repeat: no-repeat;
   background-position: center;
   background-attachment: fixed;
