--- a/src/app/component/view/login/login.component.html
+++ b/src/app/component/view/login/login.component.html
@@ -19,13 +19,15 @@
               </p-iconField>
           </div>
           <div class="actions">
-              <p-button label="{{ 'PAGES.LOGIN.LOGIN_BUTTON' | translate }}" (click)="signIn()"/>
-              <p-button (click)="signIn()">
+              <p-button label="{{ 'PAGES.LOGIN.LOGIN_BUTTON' | translate }}"
+                        [disabled]="!user || !pass"
+                        (click)="signIn()"/>
+              <p-button (click)="signInWithGoogle()">
                   <p-inputIcon>
                       <img src="assets/images/login_google.svg" style="width: 10px" alt="Login with google">
                   </p-inputIcon>
               </p-button>
-              <p-button (click)="signIn()">
+              <p-button (click)="signInWithApple()">
                   <p-inputIcon>
                       <img src="assets/images/login_apple.svg" style="width: 10px" alt="Login with google">
                   </p-inputIcon>
