--- a/src/assets/themes/mytheme/_variables.scss
+++ b/src/assets/themes/mytheme/_variables.scss
@@ -116,4 +116,17 @@ $colors: (
     --highlight-text-color: #{$highlightTextColor};
     --focus-ring: #{$focusShadow};
     color-scheme: dark;
+
+
+    --p-cyan-500: #09afcd;
+    --p-cyan-400: #22cce5;
+
+    --p-orange-500: #ef7018;
+    --p-orange-400: #f18d3b;
+
+    --p-gray-500: #686f7c;
+    --p-gray-400: #979eaa;
+
+
+
 }
