--- a/src/app/component/infra/header/header.component.html
+++ b/src/app/component/infra/header/header.component.html
@@ -1,10 +1,10 @@
 <main class="flex flex-row">
+    <section></section>
 
   <section class="flex-3 flex flex-row" [class.avatar-selected]="!menuClosed" #divUser>
-
     <div>
       <p-avatar
-        [label]="getUserInitials(user().name)"
+        [label]="getUserInitials('Neo')"
         styleClass="mr-2"
         size="large"
         shape="circle" />
