--- a/src/app/component/infra/sidebar/sidebar.component.html
+++ b/src/app/component/infra/sidebar/sidebar.component.html
@@ -1,6 +1,6 @@
 <main>
   <section class="section-1">
-    <img src="assets/images/logo_default.svg" alt="logo default" height="22" width="150"/>
+        <!--TODO add logo-->
   </section>
   <section #section2 class="section-2" >
     <div class="menu-item" [routerLink]="routes.DASHBOARD">
@@ -12,26 +12,26 @@
     <div class="menu-item has-submenu">
       <div #item3 class="item" [class.item_selected]="verifyCurrentRoute(allSubRoutes)" (click)="openMenu()">
         <i class="menu-icon fa fa-exchange mma-btn-r" [class.icon-selected]="verifyCurrentRoute(allSubRoutes)"></i>
-        <span class="item-label">{{'SIDEBAR.CREDIT_REQUEST.PARENT_LEVEL' | translate }}</span>
+        <span class="item-label">Item 2</span>
         <i class="fa fa-chevron-up mma-btn-l" [class.fa-chevron-down]="subClosed"></i>
       </div>
       <div #submenu class="submenu" [hidden]="subClosed">
         <div class="submenu-item" [class.subItem_selected]="verifyCurrentRoute([subRoutes.PENDING])">
           <div style="padding: 10px" [routerLink]="subRoutes.PENDING">
             <i class="menu-icon pi pi-sync mma-btn-r"></i>
-            <span class="item-label">{{'SIDEBAR.CREDIT_REQUEST.PENDING' | translate }}</span>
+            <span class="item-label">Sub item 1</span>
           </div>
         </div>
         <div class="submenu-item" [class.subItem_selected]="verifyCurrentRoute([subRoutes.PRE_APPROVED])">
           <div style="padding: 10px" [routerLink]="subRoutes.PRE_APPROVED">
             <i class="menu-icon pi pi-file mma-btn-r"></i>
-            <span class="item-label">{{'SIDEBAR.CREDIT_REQUEST.PRE_APPROVED' | translate }}</span>
+            <span class="item-label">Sub item 2</span>
           </div>
         </div>
         <div class="submenu-item" [class.subItem_selected]="verifyCurrentRoute([subRoutes.AWAITING_DELIVERY])">
           <div style="padding: 10px" [routerLink]="subRoutes.AWAITING_DELIVERY">
             <i class="menu-icon pi pi-check-circle mma-btn-r"></i>
-            <span class="item-label">{{'SIDEBAR.CREDIT_REQUEST.AWAITING_DELIVERY' | translate }}</span>
+            <span class="item-label">Sub item N</span>
           </div>
         </div>
       </div>
@@ -39,13 +39,13 @@
     <div class="menu-item">
       <div class="item" [class.item_selected]="verifyCurrentRoute([routes.ACTIVE_CONTRACTS])" [routerLink]="routes.ACTIVE_CONTRACTS">
         <i class="menu-icon fa fa-star mma-btn-r" [class.icon-selected]="verifyCurrentRoute([routes.ACTIVE_CONTRACTS])"></i>
-        <span class="item-label">{{'SIDEBAR.ACTIVE_CONTRACTS' | translate }}</span>
+        <span class="item-label">Item 3</span>
       </div>
     </div>
     <div class="menu-item">
       <div class="item" [class.item_selected]="verifyCurrentRoute([routes.ARCHIVED_REQUESTS])" [routerLink]="routes.ARCHIVED_REQUESTS">
         <i class="menu-icon fa fa-archive mma-btn-r" [class.icon-selected]="verifyCurrentRoute([routes.ARCHIVED_REQUESTS])"></i>
-        <span class="item-label">{{'SIDEBAR.ARCHIVED_REQUESTS' | translate }}</span>
+        <span class="item-label">Item N</span>
       </div>
     </div>
   </section>
